split web and bot modules